feat: learn aave with api doc pool and poolprovider to make deposit script
Leverage Moccasin named contract power to automate scripting with address and abi

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -108,12 +108,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "weth.balanceOf(boa.env.eoa)\n",
     "usdc.balanceOf(boa.env.eoa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from moccasin.config import get_or_initialize_config, Config\n",
+    "\n",
+    "config: Config = get_or_initialize_config()\n",
+    "config.reload()\n",
+    "active_network = config.get_active_network()\n",
+    "aavev3_pool_address_provider = active_network.manifest_named(\"aavev3_pool_address_provider\")\n",
+    "pool_address = aavev3_pool_address_provider.getPool()\n",
+    "print(pool_address)\n",
+    "\n",
+    "config.reload()\n",
+    "active_network = config.get_active_network()\n",
+    "pool_contract = active_network.manifest_named(\"pool\", address=pool_address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Depositing 100000000 USD Coin into Aave contract pool 0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2\n",
+      "Depositing 1000000000000000000 Wrapped Ether into Aave contract pool 0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2\n",
+      "User account data:\n",
+      "        totalCollateralBase: 322869956374\n",
+      "        totalDebtBase: 0\n",
+      "        availableBorrowsBase: 259329148960\n",
+      "        currentLiquidationThreshold: 8284\n",
+      "        ltv: 8032\n",
+      "        healthFactor: 115792089237316195423570985008687907853269984665640564039457584007913129639935\n",
+      "          \n"
+     ]
+    }
+   ],
+   "source": [
+    "REFERAL_CODE = 0\n",
+    "\n",
+    "def deposit(pool_contract, token, amount):\n",
+    "    allowed_amount = token.allowance(boa.env.eoa, pool_contract.address)\n",
+    "    if allowed_amount < amount:\n",
+    "        token.approve(pool_contract.address, amount)\n",
+    "    print(f\"Depositing {amount} {token.name()} into Aave contract pool {pool_contract.address}\")\n",
+    "    pool_contract.supply(token.address, amount, boa.env.eoa, REFERAL_CODE)\n",
+    "\n",
+    "usdc_balance = usdc.balanceOf(boa.env.eoa)\n",
+    "weth_balance = weth.balanceOf(boa.env.eoa)\n",
+    "\n",
+    "if usdc_balance > 0:\n",
+    "    deposit(pool_contract, usdc, usdc_balance)\n",
+    "\n",
+    "if weth_balance > 0:\n",
+    "    deposit(pool_contract, weth, weth_balance)\n",
+    "\n",
+    "\n",
+    "(\n",
+    "    totalCollateralBase,\n",
+    "    totalDebtBase,\n",
+    "    availableBorrowsBase,\n",
+    "    currentLiquidationThreshold,\n",
+    "    ltv,\n",
+    "    healthFactor,\n",
+    ") = pool_contract.getUserAccountData(boa.env.eoa)\n",
+    "print(f\"\"\"User account data:\n",
+    "        totalCollateralBase: {totalCollateralBase}\n",
+    "        totalDebtBase: {totalDebtBase}\n",
+    "        availableBorrowsBase: {availableBorrowsBase}\n",
+    "        currentLiquidationThreshold: {currentLiquidationThreshold}\n",
+    "        ltv: {ltv}\n",
+    "        healthFactor: {healthFactor}\n",
+    "          \"\"\")"
    ]
   }
  ],
