feat: end trading algo mox project with workshop arb fork network
- Uniswap rebalance system through api with the course
- Finishing rebalance function
- Workshop done one Arbitrum fork network with ARB/USD pair
    - challenging since we are using the token of the fork mainet to balance with usd
    - new notebook for tinkering parameters for ARB network with API KEY
- Need doc though with readme and comment

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -167,11 +167,11 @@
       "Depositing 100000000 USD Coin into Aave contract pool 0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2\n",
       "Depositing 1000000000000000000 Wrapped Ether into Aave contract pool 0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2\n",
       "User account data:\n",
-      "        totalCollateralBase: 323644898399\n",
+      "        totalCollateralBase: 346108114600\n",
       "        totalDebtBase: 0\n",
-      "        availableBorrowsBase: 259983946884\n",
-      "        currentLiquidationThreshold: 8284\n",
-      "        ltv: 8033\n",
+      "        availableBorrowsBase: 278063259270\n",
+      "        currentLiquidationThreshold: 8285\n",
+      "        ltv: 8034\n",
       "        healthFactor: 115792089237316195423570985008687907853269984665640564039457584007913129639935\n",
       "          \n"
      ]
@@ -272,7 +272,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100.000001\n",
+      "100.0\n",
       "1.0\n"
      ]
     }
@@ -297,8 +297,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.99998983\n",
-      "3136.45\n"
+      "0.99997746\n",
+      "3361.0834\n"
      ]
     }
    ],
@@ -330,8 +330,8 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "0.03089774765316991\n",
-      "0.9691022523468301\n"
+      "0.028892054760278653\n",
+      "0.9711079452397213\n"
      ]
     }
    ],
@@ -369,7 +369,7 @@
      "text": [
       "USDC balance: 0\n",
       "WETH balance: 1000000000000000000\n",
-      "aUSDC balance: 100000001\n",
+      "aUSDC balance: 100000000\n",
       "aWETH balance: 0\n"
      ]
     }
@@ -386,6 +386,221 @@
     "  \n",
     "\n",
     "print_token_balances()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'usdc': {'contract': <usdc interface at 0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48>, 'trade': 938.3477481582435}, 'weth': {'contract': <weth interface at 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2>, 'trade': -0.27917385144325785}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "usdc_data = {\n",
+    "    \"balance\": a_usdc_balance_normalized,\n",
+    "    \"price\": usdc_price,\n",
+    "    \"contract\": usdc,\n",
+    "}\n",
+    "weth_data = {\n",
+    "    \"balance\": a_weth_balance_normalized,\n",
+    "    \"price\": weth_price,\n",
+    "    \"contract\": weth,\n",
+    "}\n",
+    "target_allocations = {\n",
+    "    \"usdc\": 0.3,\n",
+    "    \"weth\": 0.7,\n",
+    "}\n",
+    "\n",
+    "def calculate_rebalancing_trades(\n",
+    "    usdc_data: dict,  # {\"balance\": float, \"price\": float, \"contract\": Contract}\n",
+    "    weth_data: dict,  # {\"balance\": float, \"price\": float, \"contract\": Contract}\n",
+    "    target_allocations: dict[str, float],  # {\"usdc\": 0.3, \"weth\": 0.7}\n",
+    ") -> dict[str, dict]:\n",
+    "    \"\"\"\n",
+    "    Calculate the trades needed to rebalance a portfolio of USDC and WETH.\n",
+    "\n",
+    "    Args:\n",
+    "        usdc_data: Dict containing USDC balance, price and contract\n",
+    "        weth_data: Dict containing WETH balance, price and contract\n",
+    "        target_allocations: Dict of token symbol to target allocation (must sum to 1)\n",
+    "\n",
+    "    Returns:\n",
+    "        Dict of token symbol to dict containing contract and trade amount:\n",
+    "            {\"usdc\": {\"contract\": Contract, \"trade\": int},\n",
+    "             \"weth\": {\"contract\": Contract, \"trade\": int}}\n",
+    "    \"\"\"\n",
+    "    # Calculate current values\n",
+    "    usdc_value = usdc_data[\"balance\"] * usdc_data[\"price\"]\n",
+    "    weth_value = weth_data[\"balance\"] * weth_data[\"price\"]\n",
+    "    total_value = usdc_value + weth_value\n",
+    "\n",
+    "    # Calculate target values\n",
+    "    target_usdc_value = total_value * target_allocations[\"usdc\"]\n",
+    "    target_weth_value = total_value * target_allocations[\"weth\"]\n",
+    "\n",
+    "    # Calculate trades needed in USD\n",
+    "    usdc_trade_usd = target_usdc_value - usdc_value\n",
+    "    weth_trade_usd = target_weth_value - weth_value\n",
+    "\n",
+    "    # Convert to token amounts\n",
+    "    return {\n",
+    "        \"usdc\": {\n",
+    "            \"contract\": usdc_data[\"contract\"],\n",
+    "            \"trade\": usdc_trade_usd / usdc_data[\"price\"],\n",
+    "        },\n",
+    "        \"weth\": {\n",
+    "            \"contract\": weth_data[\"contract\"],\n",
+    "            \"trade\": weth_trade_usd / weth_data[\"price\"],\n",
+    "        },\n",
+    "    }\n",
+    "\n",
+    "trades = calculate_rebalancing_trades(usdc_data, weth_data, target_allocations)\n",
+    "print(trades)\n",
+    "\n",
+    "weth_to_sell = trades[\"weth\"][\"trade\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "279173851443257856\n",
+      "Let's swap!\n",
+      "USDC balance: 933642647\n",
+      "WETH balance: 720826148556742144\n",
+      "aUSDC balance: 100000000\n",
+      "aWETH balance: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "    # struct ExactInputSingleParams {\n",
+    "    #     address tokenIn;\n",
+    "    #     address tokenOut;\n",
+    "    #     uint24 fee;\n",
+    "    #     address recipient;\n",
+    "    #     uint256 deadline;\n",
+    "    #     uint256 amountIn;\n",
+    "    #     uint256 amountOutMinimum;\n",
+    "    #     uint160 sqrtPriceLimitX96;\n",
+    "    # }\n",
+    "\n",
+    "config.reload()\n",
+    "active_network = config.get_active_network()\n",
+    "uniswap_swap_router = active_network.manifest_named(\"uniswap-swap-router\")\n",
+    "\n",
+    "amount_weth = abs(int(weth_to_sell * 10**18))\n",
+    "\n",
+    "weth.approve(uniswap_swap_router.address, amount_weth)\n",
+    "print(amount_weth)\n",
+    "\n",
+    "min_out = int((trades[\"usdc\"][\"trade\"] * (10**6)) * 0.90)\n",
+    "\n",
+    "print(\"Let's swap!\")\n",
+    "uniswap_swap_router.exactInputSingle(\n",
+    "        (\n",
+    "            weth.address,\n",
+    "            usdc.address,\n",
+    "            3000,\n",
+    "            boa.env.eoa,\n",
+    "            amount_weth,\n",
+    "            min_out,\n",
+    "            0\n",
+    "        )\n",
+    ")\n",
+    "\n",
+    "print_token_balances()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Depositing 933642647 USD Coin into Aave contract pool 0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2\n",
+      "USDC balance: 0\n",
+      "WETH balance: 720826148556742144\n",
+      "aUSDC balance: 1033642646\n",
+      "aWETH balance: 0\n",
+      "Current percent allocation USDC: 1.0\n",
+      "Current percent allocation WETH: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "amount = usdc.balanceOf(boa.env.eoa)\n",
+    "deposit(pool_contract, usdc, amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Depositing 720826147623099497 Wrapped Ether into Aave contract pool 0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2\n"
+     ]
+    }
+   ],
+   "source": [
+    "amount = weth.balanceOf(boa.env.eoa)\n",
+    "deposit(pool_contract, weth, amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USDC balance: 0\n",
+      "WETH balance: 0\n",
+      "aUSDC balance: 1033642646\n",
+      "aWETH balance: 720826148556742144\n",
+      "Current percent allocation USDC: 0.299047124175484\n",
+      "Current percent allocation WETH: 0.700952875824516\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_token_balances()\n",
+    "\n",
+    "a_usdc_balance = a_usdc.balanceOf(boa.env.eoa) # 6 decimals\n",
+    "a_weth_balance = a_weth.balanceOf(boa.env.eoa) # 18 decimals\n",
+    "\n",
+    "a_usdc_balance_normalized = a_usdc_balance / 1e6\n",
+    "a_weth_balance_normalized = a_weth_balance / 1e18\n",
+    "\n",
+    "usdc_value = a_usdc_balance_normalized * usdc_price\n",
+    "weth_value = a_weth_balance_normalized * weth_price\n",
+    "total_value = usdc_value + weth_value\n",
+    "\n",
+    "usdc_percent_allocation = usdc_value / total_value\n",
+    "weth_percent_allocation = weth_value / total_value\n",
+    "\n",
+    "print(f\"Current percent allocation USDC: {usdc_percent_allocation}\")\n",
+    "print(f\"Current percent allocation WETH: {weth_percent_allocation}\")"
    ]
   }
  ],
